test/error/ArrayStgStringLength.fu
public class Test
{
	int["foo"] Array; //ERROR: Cannot coerce string to int
}
